# mining-daily-mcp-agent

./: .env.example  .gitattributes  .gitignore  .mcp.json  DATA_SOURCE_NOTES.md  Dockerfile  MCP_MINING_DAILY_AGENT_PLAN.md  README.md  RUN.md  docker-compose.yml  mcp-config.json  mcp-config.live.example.json  project_env.py  pyproject.toml
agent/: __init__.py  cli.py  healthcheck.py  llm.py  mcp_client.py  orchestrator.py  renderer.py  schemas.py
data/fixtures/: news.jsonl  prices.csv  resources.json
data/samples/: article_sample.html  pilbara_sample.txt  rss_sample.xml
examples/: pilbara_daily_report.md
servers/: __init__.py
servers/lme_price_mcp/: __init__.py  providers.py  server.py
servers/mineral_pdf_mcp/: __init__.py  extractor.py  server.py
servers/mining_news_mcp/: __init__.py  providers.py  server.py
tests/: conftest.py  test_agent_report.py  test_cli_output.py  test_llm.py  test_news_server.py  test_pdf_extractor.py  test_price_server.py
