[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mining-daily-mcp-agent"
version = "0.1.0"
description = "MCP-based mining rights daily report agent with news, resources, and price tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
live = [
  "pymupdf>=1.24.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "servers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
